@@ -1,4 +1,4 @@
-/* $Id: dewin.c,v 1.4.4.3.2.3 2008/11/13 15:34:14 uehira Exp $ */
+/* $Id: dewin.c,v 1.4.4.3.2.4 2008/12/29 11:25:11 uehira Exp $ */
 /* program dewin  1994.4.11-4.20  urabe */
 /*                1996.2.23 added -n option */
 /*                1996.9.12 added -8 option */
@@ -204,7 +204,7 @@ main(argc,argv)
   for(i=0;i<MAX_FILT*4;++i)
     uv[i]=0.0;
 
-  while((c=getopt(argc,argv,"chmnaf:"))!=EOF){
+  while((c=getopt(argc,argv,"chmnaf:"))!=-1){
      switch(c){
       case 'a':
         form=8;   /* 8bit format output*/
@@ -274,7 +274,7 @@ main(argc,argv)
         print_usage();
         exit(0);
       }
-    }  /*  End of "while((c=getopt(argc,argv,"chmnaf:"))!=EOF){" */
+    }  /*  End of "while((c=getopt(argc,argv,"chmnaf:"))!=-1){" */
 
 #if DEBUG
   fprintf(stderr,"filter_flag = %d\n",filter_flag);
