@@ -1,4 +1,4 @@
-/* $Id: fromtape.c,v 1.7.2.3.2.3 2008/11/23 10:01:09 uehira Exp $ */
+/* $Id: fromtape.c,v 1.7.2.3.2.4 2008/12/29 11:25:11 uehira Exp $ */
 /*
   program "fromtape.c"
   12/10/90 - 12/13/90, 9/19/91, 10/30/91, 6/19/92  urabe
@@ -130,7 +130,7 @@ main(argc,argv)
 /* open exabyte device */
   max_file=handshake=0;
   strcpy(exb_name,"/dev/nrst0");
-  while((c=getopt(argc,argv,"sn:f:"))!=EOF)
+  while((c=getopt(argc,argv,"sn:f:"))!=-1)
     {
     switch(c)
       {
